--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Open console to play Game</h1>
- <script src="/script.js"></script>  
+ <script src="./script.js"></script>  
 </body>
 </html>
